Regression(r283217) : [ iOS 15 ] media/track/track-forced-subtitles-in-band.html is failing https://bugs.webkit.org/show_bug.cgi?id=231333 rdar://83955154

Reviewed by Jer Noble.

* LayoutTests/media/track/track-forced-subtitles-in-band-expected.txt: Update.
* LayoutTests/media/track/track-forced-subtitles-in-band.html: Ditto.
* LayoutTests/media/video-test.js: Make waitForEventWithTimeout return a Promise
  rejection when it times out so failures can be caught.
* LayoutTests/platform/ios-wk2/TestExpectations: Remove updated test.
* LayoutTests/platform/mac/TestExpectations: Ditto.

* Source/WebCore/html/track/TextTrackCueGeneric.cpp: Add more logging to help future debugging.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm: Ditto.

Canonical link: https://commits.webkit.org/251432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295426 268f45cc-cd09-0410-ab3c-d52691b4dbfc